# claude-codepro

./: .gitattributes  .gitignore  .mcp.json  .releaserc.json  LICENSE  README.md  coverage.json  install.sh  pyproject.toml
.claude/: settings.local.json  settings.local.template.json  statusline.json
.claude/commands/: ccp.md  implement.md  plan.md  save-session.md  setup.md  spec.md
.claude/hooks/: auditor_feedback.py  context_monitor.py  file_checker_python.py  file_checker_python.sh  file_checker_qlty.py  file_checker_ts.py  tdd_enforcer.py
.claude/rules/: config.yaml
.claude/rules/core/: mcp-tools.md
.claude/rules/custom/: python-rules.md  typescript-rules.md
.claude/rules/extended/: backend-python.md
.claude/rules/standard/: agent-browser.md  context-continuation.md  context7-docs.md  firecrawl-search.md  git-operations.md  library-docs.md  lsp-servers.md  mcp-cli.md  mcp-tools.md  systematic-debugging.md  tdd-enforcement.md  testing-strategies-coverage.md  web-search-scraping.md  workflow-enforcement.md
.claude/rules/workflow/: verify.md
.claude/scripts/: __init__.py  helper.py  statusline.py  wrapper.py
.claude/skills/brainstorming/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/custom/: README.md
.claude/skills/finishing-a-development-branch/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/standards-accessibility/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-approve.yml  pr-lint.yml  quality.yml  release.yml
.qlty/: qlty.toml
ccp/: __init__.py  __main__.py  auth.py  build.py  cli.py  helper.py  updater.py  wrapper.py
ccp/auditor/: __init__.py  agent.py  config.py  feedback.py  loader.py  monitor.py  types.py
ccp/statusline/: __init__.py  __main__.py  formatter.py  providers.py  widgets.py
docs/: SYNCING_UPSTREAM.md
docs/site/: index.html  netlify.toml  package-lock.json  package.json  tailwind.config.ts
docs/site/src/: App.tsx  (+1 more)
installer/: __init__.py  __main__.py  build.py  cli.py  config.py  context.py  downloads.py  errors.py  platform_utils.py  ui.py
installer/steps/: __init__.py  base.py  bootstrap.py  ccp_binary.py  claude_files.py  config_files.py  dependencies.py  environment.py  finalize.py  git_setup.py  shell_config.py  vscode_extensions.py
scripts/: build-rules.sh  install.py  install.sh  setup-env.sh
scripts/lib/: env_setup.py  migration.sh  premium.py  shell_config.py
tests/e2e/: test_install.py
tests/integration/: test_license_flow.py
tests/unit/: __init__.py  conftest.py  test_helper.py  test_install_sh.py  test_premium.py  test_shell_config.py  test_wrapper.py
(+74 files in other folders)
