[project]
name = "claude-codepro"
version = "1.0.0"
description = "Claude CodePro"
requires-python = ">=3.12,<3.13"
readme = "README.md"
maintainers = [
    { name = "Zach Birge", email = "zach@birge-consulting.com" }
]
dependencies = [
    "rich>=14.0.0",
    "httpx>=0.28.1",
    "typer>=0.21.1",
    "platformdirs>=4.3.6",
    "pyinstaller>=6.17.0",
]

[project.urls]
Repository = "https://github.com/zbirge/claude-codepro"
Homepage = "https://claude-code.pro"
Issues = "https://github.com/zbirge/claude-codepro/issues"

[project.scripts]
ccp-installer = "installer.cli:app"

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "ruff>=0.12.3",
    "pytest>=8.3.3",
    "pytest-cov>=7.0.0",
    "vulture>=2.14",
    "tox>=4.28.4",
    "build>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["installer", "."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
testpaths = ["tests/unit"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
norecursedirs = ["target/**", ".venv/**", "**/.tox/**", "**/build/**", "misc/"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["target/**", ".venv/**", "**/.tox/**", "**/build/**", "misc/"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["app"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "ERA", # eradicate (detect commented-out code)
]
ignore = [
    "D100",
    "D104",
    "E902",
    "E501",
    "F401",
    "F403",
    "F405",
    "C901",
    "B905",
    "N803",
    "N806",
    "N815",
    "W391",
    "W292",
    "SIM105",
    "B008",
    "B006",
    "F821",
    "B012",
    "F541",
    "C408",
    "B007",
    "B904",
    "C416",
    "B017",
    "SIM108",
    "SIM113",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.vulture]
exclude = [".venv/**", "target/**", "**/.tox/**", "**/build/**"]
min_confidence = 80
paths = ["installer"]

[tool.mypy]
ignore_missing_imports = true

[tool.basedpyright]
include = ["installer"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "target/**",
    ".venv/**",
    "**/.tox/**",
    "**/build/**",
    "misc/",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportUnknownMemberType = false
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
reportImplicitRelativeImport = false
